tdf#97719: Canceling insert image dialog gives error dialog

Change-Id: I3ac9b0fe4d5a91d16af559ee8e38bc7be97cc694
Reviewed-on: https://gerrit.libreoffice.org/22408
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Henry Castro <hcastro@collabora.com>